--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>香浓果园</title>
+		<title>食尚悠品</title>
 	</head>
 	<link rel="stylesheet" type="text/css" href="css/common.css"/>
 	<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
